re PR bootstrap/38100 (gcc fails to compile with (undefined symbol) gimple_check_failed error)

PR bootstrap/38100
	* gimple.h (gimple_range_check_failed): Remove prototype.
	* gimple.c (gimple_check_failed): Don't check GCC_VERSION
	in guarding #if.
	(gimple_range_check_failed): Removed.

From-SVN: r141820