gcc/gimple.c
@@ -1100,7 +1100,7 @@ gimple_statement_structure (gimple gs)
   return gss_for_code (gimple_code (gs));
 }
 
-#if defined ENABLE_GIMPLE_CHECKING && (GCC_VERSION >= 2007)
+#if defined ENABLE_GIMPLE_CHECKING
 /* Complain of a gimple type mismatch and die.  */
 
 void
@@ -1115,41 +1115,6 @@ gimple_check_failed (const_gimple gs, const char *file, int line,
 		  gs->gsbase.subcode > 0
 		    ? tree_code_name[gs->gsbase.subcode]
 		    : "",
-		  function, trim_filename (file), line);
-}
-
-
-/* Similar to gimple_check_failed, except that instead of specifying a
-   dozen codes, use the knowledge that they're all sequential.  */
-
-void
-gimple_range_check_failed (const_gimple gs, const char *file, int line,
-		           const char *function, enum gimple_code c1,
-		           enum gimple_code c2)
-{
-  char *buffer;
-  unsigned length = 0;
-  enum gimple_code c;
-
-  for (c = c1; c <= c2; ++c)
-    length += 4 + strlen (gimple_code_name[c]);
-
-  length += strlen ("expected ");
-  buffer = XALLOCAVAR (char, length);
-  length = 0;
-
-  for (c = c1; c <= c2; ++c)
-    {
-      const char *prefix = length ? " or " : "expected ";
-
-      strcpy (buffer + length, prefix);
-      length += strlen (prefix);
-      strcpy (buffer + length, gimple_code_name[c]);
-      length += strlen (gimple_code_name[c]);
-    }
-
-  internal_error ("gimple check: %s, have %s in %s, at %s:%d",
-		  buffer, gimple_code_name[gimple_code (gs)],
 		  function, trim_filename (file), line);
 }
 #endif /* ENABLE_GIMPLE_CHECKING */
